--- a/RaccoonBandit_prototype1/export_presets.cfg
+++ b/RaccoonBandit_prototype1/export_presets.cfg
@@ -2,13 +2,13 @@
 
 name="Web"
 platform="Web"
-runnable=true
+runnable=false
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="Exports/index.html"
+export_path="Export2/index.html"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
